Compiler/tests/typing/bad/testfile-borrow_mut-6.rs

fn foo(x: &mut i32) { }
fn main() { let x = 42; foo(& x); }
